--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           >
             Download CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href='mailto:examplemail@gmail.com'">
+          <button class="btn btn-color-1" onclick="location.href='mailto:srt9930@gmail.com'">
             Contact Info
           </button>
         </div>
@@ -542,7 +542,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">srt9930@gmail.com</a></p>
+          <p><a href="mailto:srt9930@gmail.com">srt9930@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
