--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#top">Top 🡡</a></li>
+            <li><a href="#top">Top</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#projects">Projects</a></li>
