--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-         onclick="window.open('https://github.com/Srt9930/', '_blank')"
+         onclick="window.open('https://github.com/Srt9930/About-me/', '_blank')"
           />
         </div>
       </div>
